# Ballistics

./: CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt
src/ballistics/coordinate_system/time/: Time.cpp  Time.hpp
src/ballistics/force/: BaseForce.hpp
src/ballistics/satellite/: SatelliteData.hpp
src/ballistics/utils/: Consts.hpp
src/integrator/: DormandPrince78.cpp  DormandPrince78.hpp  StepStruct.hpp
src/right_hand_side/: RightHandSide.cpp  RightHandSide.hpp
test_package/: CMakeLists.txt  test_build.cpp
tests/: CMakeLists.txt  test_eigen.cpp  test_gtest.cpp
